<resources>
    <string name="project_name">fredwong_COMP304Lab2_ex1</string>
    <string name="app_name">LeaseOrRentHome Inc.</string>
    <string name="main_logo_content_description">Lease or Rent Home Inc. logo</string>
    <string name="main_button_text">Enter</string>
    <string name="menu_apartment_text">Apartment</string>
    <string name="menu_detached_home_text">Detached Home</string>
    <string name="menu_semi_detached_home_text">Semi-detached Home</string>
    <string name="menu_condominium_apartment_text">Condominium Apartment</string>
    <string name="menu_town_house_text">Townhouse</string>
    <string name="text_hint_select_home_type">Select a home type through the options menu or from the following:</string>
    <string name="text_address_preview">123 Eglinton Ave, Unit 201 \nToronto ON M1B 2L4</string>
    <string name="text_price_preview">1785.00</string>
    <string name="text_cart_button">Go to Checkout</string>
    <string name="text_checkout_button">Checkout</string>
    <string name="text_cart_title">Cart</string>
    <string name="text_cart_hint">Please select one of the housing units that you\'ve browsed.</string>
    <string name="selected_items">selectedItems</string>
    <string name="payment_method">Payment Method</string>
    <string name="button_confirm_payment_method">Confirm</string>
    <string name="radio_text_debit_card">Debit Card</string>
    <string name="radio_text_credit_card">Credit Card</string>
    <string name="radio_text_cash">Cash</string>
    <string name="selectedItemPayment">%1$s \n$%2$.2f</string>
    <string name="text_payment_complete">Thank you for visiting %s!</string>
    <string name="text_payment_info_title">Customer Billing Information\n</string>
    <string name="text_customer_name_label">Full Name:</string>
    <string name="text_email_label">Email:</string>
    <string name="text_card_number_label">Card Number:</string>
    <string name="text_phone_label">Phone Number:</string>
    <string name="editText_hint_full_name">Enter Full Name</string>
    <string name="editText_hint_email_address">Enter Email Address</string>
    <string name="editText_hint_card_number">4012 8888 8888 1881</string>
    <string name="editText_hint_phone_number">123–456–7890</string>
    <string name="text_postal_address_label">Address: </string>
    <string name="text_favourite_colour_label">Favourite Colour:</string>
    <string name="editText_hint_address">123 Main Street, Toronto ON M4B 2LA</string>
    <string name="editText_hint_favourite_colour">Green</string>
    <string name="editText_hint_favourite_number">256</string>
    <string name="text_favourite_number_label">Favourite Number:</string>
    <string name="text_submit_button"><![CDATA[Submit & Pay]]></string>
    <string name="text_error_required_field">This field is required!</string>
    <string name="text_error_email_address">Invalid email address!</string>
    <string name="text_error_card_number">Invalid card number!</string>
    <string name="text_error_phone_number">Invalid phone number</string>
    <string name="text_error_favourite_number_format">Invalid input - numbers only!</string>
    <string name="text_return_button">Return to Home</string>
    <string name="text_no_radio_options_selected">No options were selected! Select one of the above!</string>
    <string name="text_hint_no_selections">No housing options were selected. Please return to browsing and make one or more selections.</string>
    <string name="button_text_no_options_selected">Please return to housing types and make one or more selections.</string>
    <string-array name="apartment_addresses">
        <item>100 King St W, Unit 101 \nToronto, ON M5X 2A2</item>
        <item>18 St Thomas St, Unit 202 \nToronto, ON M5S 1L7</item>
        <item>516 Eglinton Ave W, Unit 303 \nToronto, ON M5N 1A5</item>
    </string-array>
    <string-array name="apartment_prices">
        <item>1708.00</item>
        <item>1555.00</item>
        <item>1366.00</item>
    </string-array>
    <string-array name="condo_addresses">
        <item>40 Eglinton Ave, E Unit 103 \nToronto, ON M4P 3A2</item>
        <item>414 Dupont St, Unit 203 \nToronto, ON M5R 1V9</item>
        <item>40 St Clair Ave W, Unit 303 \nToronto, ON M4V 1M2</item>
    </string-array>
    <string-array name="condo_prices">
        <item>2022.00</item>
        <item>1864.00</item>
        <item>1544.00</item>
    </string-array>
    <string-array name="detached_home_addresses">
        <item>504 Adelaide St W \nToronto, ON M5V 1T4</item>
        <item>1032 Queen St W \nToronto, ON M6J 1H7</item>
        <item>18 Yorkville Ave \nToronto, ON M4W 3Y8</item>
    </string-array>
    <string-array name="detached_home_prices">
        <item>2083.00</item>
        <item>1888.00</item>
        <item>1450.00</item>
    </string-array>
    <string-array name="semi_detached_home_addresses">
        <item>1543 Dupont St, Unit A \nToronto, ON M6P 3S5</item>
        <item>100 King St W, Unit B \nToronto, ON M5X 1E1</item>
        <item>827 Lansdowne Ave, Unit A \nToronto, ON M6H 3Z2</item>
    </string-array>
    <string-array name="semi_detached_home_prices">
        <item>1777.00</item>
        <item>1666.00</item>
        <item>1333.00</item>
    </string-array>
    <string-array name="townhouse_addresses">
        <item>202 Davenport Rd \nToronto, ON M5R 1J2</item>
        <item>488 Wellington St W \nToronto, ON M5V 1E3</item>
        <item>1288 Dundas St W \nToronto, ON M6J 1X7</item>
    </string-array>
    <string-array name="townhouse_prices">
        <item>2212.00</item>
        <item>2080.00</item>
        <item>1654.00</item>
    </string-array>

</resources>