<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentSelectionActivity">

    <TextView
        android:id="@+id/paymentMethodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedHousing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/radioGroupPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethodTitle"
        tools:text="Example Address - Price: $1000.00" />

    <RadioGroup
        android:id="@+id/radioGroupPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedHousing">

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_cash" />

        <RadioButton
            android:id="@+id/radioButtonCreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_credit_card" />

        <RadioButton
            android:id="@+id/radioButtonDebitCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_debit_card" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/button_confirm_payment_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPayment" />

</androidx.constraintlayout.widget.ConstraintLayout>