<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeTypeSelectionActivity">

    <TextView
        android:id="@+id/text_select_type_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_hint_select_home_type"
        android:textAlignment="center"
        android:textColor="@color/light_teal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/apartmentTypeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apartmentTypeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/menu_apartment_text"
        app:layout_constraintBottom_toTopOf="@id/condoTypeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_select_type_hint" />

    <Button
        android:id="@+id/condoTypeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/menu_condominium_apartment_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apartmentTypeButton"
        app:layout_constraintBottom_toTopOf="@id/detachedHomeTypeButton" />

    <Button
        android:id="@+id/detachedHomeTypeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/menu_detached_home_text"
        app:layout_constraintBottom_toTopOf="@id/semiDetachedHomeTypeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condoTypeButton" />

    <Button
        android:id="@+id/semiDetachedHomeTypeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/menu_semi_detached_home_text"
        app:layout_constraintBottom_toTopOf="@id/townhouseTypeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detachedHomeTypeButton" />

    <Button
        android:id="@+id/townhouseTypeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/menu_town_house_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/semiDetachedHomeTypeButton" />
</androidx.constraintlayout.widget.ConstraintLayout>